# windtools-mcp

./: .dockerignore  Dockerfile  README.md  hello.py  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
src/windtools_mcp/: server.py
tests/: test_unit.py
